[package]
name = "range_number_generator_bot"
version = "1.0.0"
authors = ["HirbodBehnam <chrome.hiri.angry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.4", features = ["auto-send"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
rand = "0.8.0"
rand_chacha = "0.3.0"
lazy_static = "1.4.0"